--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,25 @@
+* {
+  box-sizing: border-box;
+}
+
 .app {
   display: grid;
   height: 100vh;
-  grid-template-rows: 100px 1fr 100px;
+  grid-template-columns: minmax(100px, auto) 1fr minmax(100px, auto);
+  grid-template-rows: minmax(100px, auto) 1fr minmax(100px, auto);
+}
+
+.app__header {
+  grid-row: 1;
+  grid-column: 2;
+}
+
+.app__main {
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.app__footer {
+  grid-column: 2;
+  grid-row: 3;
 }
