City. Hourly + Additional

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -28,6 +28,7 @@
           'city city city favs'
           'city city city favs'
           'city city city favs';
+    grid-gap: 20px;
 }
 
 .app__footer {
