--- a/src/components/City/City.css
+++ b/src/components/City/City.css
@@ -7,7 +7,7 @@
 .city__lead {
     display: grid;
     grid-template-columns: [main] minmax(100px, 400px) [peripheral] 1fr;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(2, auto);
 }
 
 .city__main {
@@ -18,13 +18,23 @@
 .city__peripheral {
     grid-column: 2;
     grid-row: 1 / 2;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 10px;
 }
 
 .city__title {
     margin-right: 10px;
+    display: flex;
+    column-gap: 0.625rem;
+    font-size: 1.5rem;
     line-height: 1rem;
 }
 
+.city__text {
+    margin: 0;
+}
 
 .city__temp {
     margin-top: 0;
@@ -35,13 +45,58 @@
 
 .city__description {
     margin-bottom: 0;
-    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 10px;
+}
+
+.city__temperatures {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 10px;
+}
+
+.city__temp-max {
+    margin: 0;
+}
+
+.city__temp-min {
+    margin: 0;
+}
+
+.city__icon_type_navi {
+    font-size: 1rem;
 }
 
 .city__flex-wrapper {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    gap: 10px;
+}
+
+.city__additional {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    gap: 10px;
+}
+
+.city__wind-unit {
+    margin: 0;
+}
+
+.city__hours {
+    padding: 30px 0;
+}
+
+.city__hour-forecast {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 20px;
 }
 
 .city__week-days {
