--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,7 +7,6 @@
     display: grid;
     grid-template-columns: minmax(100px, auto) 1fr minmax(100px, auto);
     grid-template-rows: minmax(100px, auto) 1fr minmax(100px, auto);
-    place-items: center;
 }
 
 .app_theme_dark {
@@ -29,6 +28,7 @@
           'city city city favs'
           'city city city favs'
           'city city city favs';
+    grid-gap: 20px;
 }
 
 .app__footer {
