--- a/src/components/City/City.css
+++ b/src/components/City/City.css
@@ -1,11 +1,39 @@
 .city {
-    text-align: center;
     grid-area: city;
+    display: grid;
+    grid-template-rows: repeat(3, auto);
+}
+
+.city__lead {
+    display: grid;
+    grid-template-columns: [main] minmax(100px, 400px) [peripheral] 1fr;
+    grid-template-rows: repeat(2, auto);
+}
+
+.city__main {
+    grid-column: 1;
+    grid-row: 1 / 2;
+}
+
+.city__peripheral {
+    grid-column: 2;
+    grid-row: 1 / 2;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 10px;
 }
 
 .city__title {
     margin-right: 10px;
+    display: flex;
+    column-gap: 0.625rem;
+    font-size: 1.5rem;
     line-height: 1rem;
+}
+
+.city__text {
+    margin: 0;
 }
 
 .city__temp {
@@ -17,11 +45,72 @@
 
 .city__description {
     margin-bottom: 0;
-    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 10px;
+}
+
+.city__temperatures {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 10px;
+}
+
+.city__temp-max {
+    margin: 0;
+}
+
+.city__temp-min {
+    margin: 0;
+}
+
+.city__icon_type_navi {
+    font-size: 1rem;
 }
 
 .city__flex-wrapper {
     display: flex;
     align-items: center;
+    gap: 10px;
+}
+
+.city__additional {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    gap: 10px;
+}
+
+.city__wind-unit {
+    margin: 0;
+}
+
+.city__hours {
+    padding: 30px 0;
+}
+
+.city__hour-forecast {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 20px;
+}
+
+.city__week-days {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.city__week-day {
+    display: flex;
     justify-content: space-between;
+}
+
+.city__week-temperature {
+    display: flex;
+    column-gap: 10px;
 }
