--- a/src/components/ThemeSwitcher/ThemeSwitcher.css
+++ b/src/components/ThemeSwitcher/ThemeSwitcher.css
@@ -1,3 +1,54 @@
+@keyframes switchAnimation {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.2);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
 .theme-switcher {
     grid-area: theme-switcher;
+    display: flex;
+    column-gap: 10px;
+    align-items: center;
+}
+
+.theme-switcher__wrapper {
+    position: relative;
+    display: flex;
+    width: 50px;
+    min-height: 22px;
+    background-color: #3d3d3d;
+    border-radius: 15px;
+}
+
+.theme-switcher__btn {
+    width: 22px;
+    height: 22px;
+    background-color: white;
+    border: none;
+    border-radius: 50%;
+    transition: all 2s ease;
+}
+
+.theme-switcher__btn:active {
+    animation-name: switchAnimation;
+    animation-duration: .5s;
+    animation-iteration-count: infinite;
+}
+
+.theme-switcher__btn_type_light {
+    box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.40);
+}
+
+.theme-switcher__btn_type_dark {
+    position: absolute;
+    right: 0;
+    box-shadow: 0 0 4px 2px rgba(255, 255, 255, 0.40);
 }
