--- a/src/components/ThemeSwitcher/ThemeSwitcher.css
+++ b/src/components/ThemeSwitcher/ThemeSwitcher.css
@@ -34,7 +34,7 @@
     background-color: white;
     border: none;
     border-radius: 50%;
-    transition: all 2s ease;
+    transition: all 1s ease;
 }
 
 .theme-switcher__btn:active {
@@ -44,11 +44,12 @@
 }
 
 .theme-switcher__btn_type_light {
-    box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.40);
+    box-shadow: 0 0 4px 3px rgba(0, 0, 0, 0.40);
 }
 
 .theme-switcher__btn_type_dark {
     position: absolute;
     right: 0;
-    box-shadow: 0 0 4px 2px rgba(255, 255, 255, 0.40);
+    background-color: var(--theme-black-color);
+    box-shadow: 0 0 4px 3px rgba(255, 255, 255, 0.40);
 }
