--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+:root {
+    --theme-black-bg: #202124;
+    --theme-black-color: rgb(234, 147, 104);
+}
+
 body {
     margin: 0;
     font-size: 16px;
