--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,15 +3,34 @@
 }
 
 .app {
-    height: 100vh;
+    min-height: 100vh;
     display: grid;
     grid-template-columns: minmax(100px, auto) 1fr minmax(100px, auto);
     grid-template-rows: minmax(100px, auto) 1fr minmax(100px, auto);
+    transition: background-color .5s ease;
+}
+
+.app_theme_light a {
+    color: black;
 }
 
 .app_theme_dark {
-    background-color: #000;
-    color: #fff;
+    background-color: var(--theme-black-bg);
+    color: var(--theme-black-color);
+}
+
+.app_theme_dark .favs {
+    outline: 1px dashed white;
+}
+
+.app_theme_dark a {
+    color: white;
+}
+
+.app_theme_dark input {
+    background-color: var(--theme-black-color);
+    color: var(--theme-black-bg);
+    border: none;
 }
 
 .app__header {
@@ -24,7 +43,7 @@
     grid-row: 2;
     display: grid;
     grid-template-areas:
-          'date search search theme-switcher'
+          'date search search favs'
           'city city city favs'
           'city city city favs'
           'city city city favs';
