--- a/src/components/ThemeSwitcher/ThemeSwitcher.css
+++ b/src/components/ThemeSwitcher/ThemeSwitcher.css
@@ -15,20 +15,39 @@
 .theme-switcher {
     grid-area: theme-switcher;
     display: flex;
+    width: 50px;
     column-gap: 10px;
     align-items: center;
 }
 
 .theme-switcher__wrapper {
     position: relative;
+    padding: 2px;
     display: flex;
-    width: 50px;
-    min-height: 22px;
+    align-items: center;
+    gap: 5px;
+    width: 100%;
+    min-height: 24px;
     background-color: #3d3d3d;
     border-radius: 15px;
 }
 
+.theme-switcher__background {
+    border-radius: 50%;
+    box-shadow: 0 0 10px 5px gray;
+}
+
+.theme-switcher__icon {
+    font-style: normal;
+}
+
+.theme-switcher__icon_sun {
+    color: yellow;
+    order: 2;
+}
+
 .theme-switcher__btn {
+    position: relative;
     width: 22px;
     height: 22px;
     background-color: white;
@@ -37,19 +56,26 @@
     transition: all 1s ease;
 }
 
+.theme-switcher__btn:not(:disabled):hover {
+    box-shadow: 0 0 2px 3px rgba(26, 84, 186, 0.9);
+    opacity: 1;
+}
+
+.theme-switcher__btn:not(:disabled):focus {
+    box-shadow: 0 0 2px 3px rgba(26, 84, 186, 0.9);
+    outline: none;
+}
+
 .theme-switcher__btn:active {
     animation-name: switchAnimation;
     animation-duration: .5s;
     animation-iteration-count: infinite;
 }
 
-.theme-switcher__btn_type_light {
-    box-shadow: 0 0 4px 3px rgba(0, 0, 0, 0.40);
+.theme-switcher__btn_type_light:hover {
+    box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.40);
 }
 
 .theme-switcher__btn_type_dark {
-    position: absolute;
-    right: 0;
-    background-color: var(--theme-black-color);
-    box-shadow: 0 0 4px 3px rgba(255, 255, 255, 0.40);
+    right: -3px;
 }
