--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -13,6 +13,16 @@ input {
     grid-template-columns: minmax(100px, auto) 1fr minmax(100px, auto);
     grid-template-rows: minmax(100px, auto) 1fr minmax(100px, auto);
     transition: background-color .5s ease;
+    overflow: hidden;
+}
+
+.app_theme_light {
+    background-color: lightskyblue;
+}
+
+.app_theme_light input {
+    background-color: lightskyblue;
+    color: var(--text-main);
 }
 
 .app_theme_light a {
@@ -24,10 +34,6 @@ input {
     color: var(--theme-black-color);
 }
 
-.app_theme_dark .favs {
-    outline: 1px dashed white;
-}
-
 .app_theme_dark a {
     color: white;
 }
@@ -36,6 +42,11 @@ input {
     background-color: var(--theme-black-bg);
     color: var(--theme-black-color);
     border: 2px solid var(--theme-black-color);
+}
+
+.app_theme_dark input::placeholder {
+    color: currentColor;
+    opacity: .75;
 }
 
 .app__header {
@@ -52,7 +63,7 @@ input {
           'city city city favs'
           'city city city favs'
           'city city city favs';
-    grid-template-columns: 1fr 1fr 1fr minmax(200px, auto);
+    grid-template-columns: 1fr 1fr 1fr auto;
     grid-gap: 20px;
 }
 
