--- a/src/components/City/City.css
+++ b/src/components/City/City.css
@@ -4,6 +4,10 @@
     grid-template-rows: repeat(3, auto);
 }
 
+.city__title {
+    margin-top: 0;
+}
+
 .city__lead {
     display: grid;
     grid-template-columns: [main] minmax(100px, 400px) [peripheral] 1fr;
@@ -25,9 +29,10 @@
     flex-direction: column;
     align-items: flex-end;
     gap: 10px;
+    font-weight: 700;
 }
 
-.city__title {
+.city__name {
     margin: 0;
     display: flex;
     column-gap: 0.625rem;
@@ -87,7 +92,7 @@
     gap: 10px;
 }
 
-.city__wind-unit {
+.city__unit {
     margin: 0;
 }
 
@@ -100,22 +105,6 @@
     flex-direction: column;
     align-items: center;
     row-gap: 20px;
-}
-
-.city__week-days {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.city__week-day {
-    display: flex;
-    justify-content: space-between;
-}
-
-.city__week-temperature {
-    display: flex;
-    column-gap: 10px;
 }
 
 .city__icon_type_flag {
