--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,8 +1,5 @@
-* {
-    box-sizing: border-box;
-}
-
 input {
+    padding: 2px;
     border: 2px solid var(--text-main);
     border-radius: 4px;
 }
@@ -12,8 +9,7 @@ input {
     display: grid;
     grid-template-columns: minmax(100px, auto) 1fr minmax(100px, auto);
     grid-template-rows: minmax(100px, auto) 1fr minmax(100px, auto);
-    transition: background-color .5s ease;
-    overflow: hidden;
+    transition: background-color .35s ease;
 }
 
 .app_theme_light {
