--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -10,6 +10,7 @@ input {
     grid-template-columns: minmax(100px, auto) 1fr minmax(100px, auto);
     grid-template-rows: minmax(100px, auto) 1fr minmax(100px, auto);
     transition: background-color .35s ease;
+    overflow: hidden;
 }
 
 .app_theme_light {
