--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,7 @@
-* {
-    box-sizing: border-box;
+input {
+    padding: 2px;
+    border: 2px solid var(--text-main);
+    border-radius: 4px;
 }
 
 .app {
@@ -7,7 +9,17 @@
     display: grid;
     grid-template-columns: minmax(100px, auto) 1fr minmax(100px, auto);
     grid-template-rows: minmax(100px, auto) 1fr minmax(100px, auto);
-    transition: background-color .5s ease;
+    transition: background-color .35s ease;
+    overflow: hidden;
+}
+
+.app_theme_light {
+    background-color: lightskyblue;
+}
+
+.app_theme_light input {
+    background-color: lightskyblue;
+    color: var(--text-main);
 }
 
 .app_theme_light a {
@@ -19,18 +31,19 @@
     color: var(--theme-black-color);
 }
 
-.app_theme_dark .favs {
-    outline: 1px dashed white;
-}
-
 .app_theme_dark a {
     color: white;
 }
 
 .app_theme_dark input {
-    background-color: var(--theme-black-color);
-    color: var(--theme-black-bg);
-    border: none;
+    background-color: var(--theme-black-bg);
+    color: var(--theme-black-color);
+    border: 2px solid var(--theme-black-color);
+}
+
+.app_theme_dark input::placeholder {
+    color: currentColor;
+    opacity: .75;
 }
 
 .app__header {
@@ -47,6 +60,7 @@
           'city city city favs'
           'city city city favs'
           'city city city favs';
+    grid-template-columns: 1fr 1fr 1fr auto;
     grid-gap: 20px;
 }
 
