--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
+@import "./styles/Button.css";
+@import "./styles/Icons.css";
+@import "./styles/custom.css";
+
 :root {
     --theme-black-bg: #202124;
-    --theme-black-color: rgb(234, 147, 104);
+    --theme-black-color: rgb(186, 176, 171);
+    --text-main: #3d3d3d;
 }
 
 body {
@@ -11,7 +16,7 @@ body {
     sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    color: #3d3d3d;
+    color: var(--text-main);
 }
 
 code {
