--- a/src/components/WeekForecast/Week.css
+++ b/src/components/WeekForecast/Week.css
@@ -10,4 +10,10 @@
     display: flex;
     justify-content: end;
     column-gap: 10px;
+    font-weight: 500;
+}
+
+.week__certain {
+    font-weight: 500;
+    font-style: italic;
 }
