--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,33 +1,44 @@
-input {
-    padding: 2px;
-    border: 2px solid var(--text-main);
-    border-radius: 4px;
-}
-
 .app {
     min-height: 100vh;
     display: grid;
     grid-template-columns: minmax(100px, auto) 1fr minmax(100px, auto);
     grid-template-rows: minmax(100px, auto) 1fr minmax(100px, auto);
+    gap: 25px;
     transition: background-color .35s ease;
     overflow: hidden;
 }
 
-.app_theme_light {
-    background-color: lightskyblue;
+.app_weather_clear {
+    background: var(--weather-bg-sunny);
 }
 
-.app_theme_light input {
-    background-color: lightskyblue;
-    color: var(--text-main);
+.app_weather_storm {
+    background: var(--weather-bg-storm);
 }
 
-.app_theme_light a {
-    color: black;
+.app_weather_storm {
+    color: var(--text-secondary);
+}
+
+.app_weather_rain {
+    background: var(--weather-bg-rainy);
+    color: var(--text-secondary);
+}
+
+.app_weather_rain input {
+    border-color: var(--text-secondary);
+}
+
+.app_weather_clouds {
+    background: var(--weather-bg-cloudy);
+}
+
+.app_weather_clouds .weather-icon_type_rain {
+    background-image: url('../../icons/rain-dark.svg');
 }
 
 .app_theme_dark {
-    background-color: var(--theme-black-bg);
+    background: var(--theme-black-bg);
     color: var(--theme-black-color);
 }
 
@@ -36,7 +47,6 @@ input {
 }
 
 .app_theme_dark input {
-    background-color: var(--theme-black-bg);
     color: var(--theme-black-color);
     border: 2px solid var(--theme-black-color);
 }
