--- a/src/components/City/City.css
+++ b/src/components/City/City.css
@@ -100,11 +100,16 @@
     padding: 30px 0;
 }
 
+.city__hour {
+    font-style: italic;
+}
+
 .city__hour-forecast {
     display: flex;
     flex-direction: column;
     align-items: center;
     row-gap: 20px;
+    font-weight: 500;
 }
 
 .city__icon_type_flag {
