--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,7 @@
 .footer {
-    padding: 1.875rem 0;
+    padding-top: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-top: 1px solid var(--text-main);
 }
