--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header {
-    padding: 1.875rem 0;
+    padding-top: 1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
