--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @import "./styles/Icons.css";
 @import "./styles/Input.css";
 @import "./styles/Link.css";
+@import "./styles/Animation.css";
 @import "./styles/custom.css";
 
 :root {
