--- a/src/styles/Input.css
+++ b/src/styles/Input.css
@@ -10,3 +10,7 @@ input:focus {
     outline-offset: 2px;
     outline: 2px solid blue;
 }
+
+.app_theme_dark input:focus {
+    outline-color: orange;
+}
