--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,7 +5,6 @@
     grid-template-rows: minmax(100px, auto) 1fr minmax(100px, auto);
     gap: 25px;
     transition: background-color .35s ease;
-    overflow: hidden;
 }
 
 .app_weather_clear {
@@ -66,10 +65,10 @@
     grid-row: 2;
     display: grid;
     grid-template-areas:
-          'date favs'
+          'date .'
           'city favs'
-          'city favs'
-          'city favs';
+          'city .'
+          'city .';
     grid-template-columns: 1fr auto;
     grid-gap: 20px;
 }
@@ -77,4 +76,32 @@
 .app__footer {
     grid-column: 2;
     grid-row: 3;
+}
+
+.app_weather_rain,
+.app_weather_storm {
+    position: relative;
+    z-index: 10;
+}
+
+.app_weather_rain *,
+.app_weather_storm * {
+    position: relative;
+    z-index: 30;
+}
+
+.app_weather_rain:before,
+.app_weather_storm:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    animation-name: stormy;
+    animation-duration: 1s;
+    animation-iteration-count: 2;
+    animation-timing-function: linear;
+    z-index: 20;
 }
