--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,5 +3,5 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-top: 1px solid var(--text-main);
+    border-top: 1px solid currentColor;
 }
