--- a/src/components/ThemeSwitcher/ThemeSwitcher.css
+++ b/src/components/ThemeSwitcher/ThemeSwitcher.css
@@ -62,9 +62,18 @@
 }
 
 .theme-switcher__btn:not(:disabled):focus {
-    box-shadow: 0 0 2px 3px rgba(26, 84, 186, 0.9);
+    box-shadow: 0 0 3px 5px rgba(26, 84, 186, 0.9);
     outline: none;
 }
+
+.app_theme_dark .theme-switcher__btn:not(:disabled):focus {
+    box-shadow: 0 0 3px 5px orange;
+}
+
+.app_theme_dark .theme-switcher__btn:not(:disabled):hover {
+    box-shadow: 0 0 2px 3px orange;
+}
+
 
 .theme-switcher__btn:active {
     animation-name: switchAnimation;
