--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -1,4 +1,18 @@
+.btn {
+    border-radius: 2px;
+    transition: all .3s ease;
+}
+
+.btn:not(:disabled):focus {
+    outline-offset: 5px;
+    outline: 2px solid blue;
+}
+
 .btn:not(:disabled):hover {
     opacity: .75;
     cursor: pointer;
+}
+
+.app_theme_dark button:not(:disabled):focus {
+    outline-color: orange;
 }
