--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -3,20 +3,48 @@
 }
 
 .search__flex-wrapper {
+    position: relative;
     display: flex;
     align-items: center;
     gap: 5px;
 }
 
 .search__icon {
+    position: absolute;
+    left: 10px;
     font-size: 1.25rem;
 }
 
 .search__input {
+    padding-left: 40px;
+    padding-right: 70px;
     font-size: 1.125rem;
     min-height: 2.75rem;
 }
 
 .search__input::placeholder {
     color: currentColor;
+}
+
+.doc-search {
+    position: absolute;
+    right: 8px;
+    display: flex;
+    min-width: calc(40px + .8em);
+    gap: 5px;
+}
+
+.doc-search__key {
+    position: relative;
+    padding-bottom: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    color: #3d3d3d;
+    background: linear-gradient(-225deg,#d5dbe4,#f8f8f8);
+    border-radius: 3px;
+    box-shadow: inset 0 -2px 0 0 #cdcde6,inset 0 0 1px 1px #fff,0 1px 2px 1px rgba(30,35,90,0.4);
+
 }
