--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -60,6 +60,7 @@
     width: 30px;
     height: 30px;
     color: #3d3d3d;
+    font-weight: 500;
     background: linear-gradient(-225deg,#d5dbe4,#f8f8f8);
     border-radius: 3px;
     box-shadow: inset 0 -2px 0 0 #cdcde6,inset 0 0 1px 1px #fff,0 1px 2px 1px rgba(30,35,90,0.4);
