--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,22 +1,68 @@
+@keyframes keyPress {
+    from {
+        transform: scale(1);
+    }
+
+    to {
+        transform: scale(0.8);
+    }
+}
+
 .search {
     grid-area: search;
 }
 
 .search__flex-wrapper {
+    position: relative;
     display: flex;
     align-items: center;
     gap: 5px;
 }
 
 .search__icon {
+    position: absolute;
+    left: 10px;
     font-size: 1.25rem;
 }
 
 .search__input {
+    padding-left: 40px;
+    padding-right: 80px;
     font-size: 1.125rem;
     min-height: 2.75rem;
 }
 
 .search__input::placeholder {
     color: currentColor;
+}
+
+.doc-search {
+    position: absolute;
+    right: 8px;
+    display: flex;
+    min-width: calc(40px + .8em);
+    gap: 5px;
+    opacity: 1;
+    transition: all .35s ease;
+}
+
+.doc-search_hide {
+    opacity: 0;
+    animation: keyPress .35s ease-in-out;
+}
+
+.doc-search__key {
+    position: relative;
+    padding-bottom: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    color: #3d3d3d;
+    font-weight: 500;
+    background: linear-gradient(-225deg,#d5dbe4,#f8f8f8);
+    border-radius: 3px;
+    box-shadow: inset 0 -2px 0 0 #cdcde6,inset 0 0 1px 1px #fff,0 1px 2px 1px rgba(30,35,90,0.4);
+
 }
