--- a/src/components/Lightnings/Lightnings.css
+++ b/src/components/Lightnings/Lightnings.css
@@ -17,7 +17,7 @@
     right: 0;
     bottom: 0;
     animation-name: stormy;
-    animation-duration: .75s;
+    animation-duration: 0.75s;
     animation-iteration-count: 1;
     animation-timing-function: linear;
     z-index: 10;
@@ -29,7 +29,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-image: url("../../images/thunder.svg");
+    background-image: url('../../images/thunder.svg');
     background-position: 0;
     background-size: cover;
     background-repeat: no-repeat;
