--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -40,15 +40,15 @@
     position: absolute;
     right: 8px;
     display: flex;
-    min-width: calc(40px + .8em);
+    min-width: calc(40px + 0.8em);
     gap: 5px;
     opacity: 1;
-    transition: all .35s ease;
+    transition: all 0.35s ease;
 }
 
 .doc-search_hide {
     opacity: 0;
-    animation: keyPress .35s ease-in-out;
+    animation: keyPress 0.35s ease-in-out;
 }
 
 .doc-search__key {
@@ -61,8 +61,7 @@
     height: 30px;
     color: #3d3d3d;
     font-weight: 500;
-    background: linear-gradient(-225deg,#d5dbe4,#f8f8f8);
+    background: linear-gradient(-225deg, #d5dbe4, #f8f8f8);
     border-radius: 3px;
-    box-shadow: inset 0 -2px 0 0 #cdcde6,inset 0 0 1px 1px #fff,0 1px 2px 1px rgba(30,35,90,0.4);
-
+    box-shadow: inset 0 -2px 0 0 #cdcde6, inset 0 0 1px 1px #fff, 0 1px 2px 1px rgba(30, 35, 90, 0.4);
 }
