--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
-@import "./styles/Button.css";
-@import "./styles/Icons.css";
-@import "./styles/Input.css";
-@import "./styles/Link.css";
-@import "./styles/Animation.css";
-@import "./styles/custom.css";
+@import './styles/Button.css';
+@import './styles/Icons.css';
+@import './styles/Input.css';
+@import './styles/Link.css';
+@import './styles/Animation.css';
+@import './styles/custom.css';
 
 :root {
     --theme-black-bg: #202124;
@@ -19,20 +19,19 @@
 body {
     margin: 0;
     font-size: 16px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+        'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: var(--text-main);
 }
 
 code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-.visually-hidden, .visually-hidden-focusable:not(:focus):not(:focus-within) {
+.visually-hidden,
+.visually-hidden-focusable:not(:focus):not(:focus-within) {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -43,4 +42,3 @@ code {
     white-space: nowrap;
     border: 0;
 }
-
