--- a/src/components/ThemeSwitcher/ThemeSwitcher.scss
+++ b/src/components/ThemeSwitcher/ThemeSwitcher.scss
@@ -13,21 +13,25 @@
 }
 
 .theme-switcher {
-    grid-area: theme-switcher;
     display: flex;
-    width: 50px;
+    grid-area: theme-switcher;
     column-gap: 10px;
     align-items: center;
+
+    width: 50px;
 }
 
 .theme-switcher__wrapper {
     position: relative;
-    padding: 2px;
+
     display: flex;
-    align-items: center;
     gap: 5px;
+    align-items: center;
+
     width: 100%;
     min-height: 24px;
+    padding: 2px;
+
     background-color: #3d3d3d;
     border-radius: 15px;
 }
@@ -41,37 +45,22 @@
     font-style: normal;
 }
 
-.theme-switcher__icon_sun {
-    color: yellow;
-    order: 2;
-}
+//.theme-switcher__icon_sun {
+//    order: 2;
+//    color: yellow;
+//}
 
 .theme-switcher__btn {
     position: relative;
+
     width: 22px;
     height: 22px;
+
     background-color: white;
     border: none;
     border-radius: 50%;
+
     transition: all 1s ease;
-}
-
-.theme-switcher__btn:not(:disabled):hover {
-    box-shadow: 0 0 2px 3px rgba(26, 84, 186, 0.9);
-    opacity: 1;
-}
-
-.theme-switcher__btn:not(:disabled):focus {
-    box-shadow: 0 0 3px 5px rgba(26, 84, 186, 0.9);
-    outline: none;
-}
-
-.app_theme_dark .theme-switcher__btn:not(:disabled):focus {
-    box-shadow: 0 0 3px 5px orange;
-}
-
-.app_theme_dark .theme-switcher__btn:not(:disabled):hover {
-    box-shadow: 0 0 2px 3px orange;
 }
 
 .theme-switcher__btn:active {
@@ -80,8 +69,26 @@
     animation-iteration-count: infinite;
 }
 
+.theme-switcher__btn:not(:disabled):hover {
+    box-shadow: 0 0 2px 2px rgb(26 84 186 / 90%);
+    opacity: 1;
+}
+
+.theme-switcher__btn:not(:disabled):focus {
+    outline: none;
+    box-shadow: 0 0 0 3px rgb(26 84 186 / 90%);
+}
+
+.app_theme_dark .theme-switcher__btn:not(:disabled):focus {
+    box-shadow: 0 0 0 2px orange;
+}
+
+.app_theme_dark .theme-switcher__btn:not(:disabled):hover {
+    box-shadow: 0 0 2px 3px orange;
+}
+
 .theme-switcher__btn_type_light:hover {
-    box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 0 4px 1px rgb(0 0 0 / 40%);
 }
 
 .theme-switcher__btn_type_dark {
