--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,7 +1,9 @@
 .footer {
-    padding-top: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-top: 1px solid currentColor;
+
+    padding-top: 1rem;
+
+    border-top: 1px solid currentcolor;
 }
