--- a/src/components/Lightnings/Lightnings.scss
+++ b/src/components/Lightnings/Lightnings.scss
@@ -9,29 +9,29 @@
     color: white;
 }
 
-.lightnings-enter .app:before {
-    content: '';
+.lightnings-enter .app::before {
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    inset: 0;
+    z-index: 10;
+    content: '';
+
     animation-name: stormy;
     animation-duration: 0.75s;
-    animation-iteration-count: 1;
     animation-timing-function: linear;
-    z-index: 10;
+    animation-iteration-count: 1;
 }
 
-.lightnings-enter-active .app:after {
-    content: '';
+.lightnings-enter-active .app::after {
     position: absolute;
     top: 0;
+    z-index: 15;
+
     width: 100%;
     height: 100%;
+    content: '';
+
     background-image: url('../../images/thunder.svg');
+    background-repeat: no-repeat;
     background-position: 0;
     background-size: cover;
-    background-repeat: no-repeat;
-    z-index: 15;
 }
