--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -15,8 +15,8 @@
 .search__flex-wrapper {
     position: relative;
     display: flex;
-    align-items: center;
     gap: 5px;
+    align-items: center;
 }
 
 .search__icon {
@@ -26,23 +26,27 @@
 }
 
 .search__input {
-    padding-left: 40px;
-    padding-right: 80px;
-    font-size: 1.125rem;
     min-height: 2.75rem;
+    padding-right: 80px;
+    padding-left: 40px;
+    font-size: 1.125rem;
 }
 
 .search__input::placeholder {
-    color: currentColor;
+    color: currentcolor;
 }
 
 .doc-search {
     position: absolute;
     right: 8px;
+
     display: flex;
-    min-width: calc(40px + 0.8em);
     gap: 5px;
+
+    min-width: calc(40px + 0.8em);
+
     opacity: 1;
+
     transition: all 0.35s ease;
 }
 
@@ -53,15 +57,19 @@
 
 .doc-search__key {
     position: relative;
-    padding-bottom: 2px;
+
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+
     width: 30px;
     height: 30px;
-    color: #3d3d3d;
+    padding-bottom: 2px;
+
     font-weight: 500;
+    color: #3d3d3d;
+
     background: linear-gradient(-225deg, #d5dbe4, #f8f8f8);
     border-radius: 3px;
-    box-shadow: inset 0 -2px 0 0 #cdcde6, inset 0 0 1px 1px #fff, 0 1px 2px 1px rgba(30, 35, 90, 0.4);
+    box-shadow: inset 0 -2px 0 0 #cdcde6, inset 0 0 1px 1px #fff, 0 1px 2px 1px rgb(30 35 90 / 40%);
 }
