--- a/src/styles/Link.scss
+++ b/src/styles/Link.scss
@@ -1,11 +1,11 @@
 a {
-    color: currentColor;
+    color: currentcolor;
     border-radius: 2px;
 }
 
 a:focus {
-    outline-offset: 2px;
     outline: 2px solid blue;
+    outline-offset: 2px;
 }
 
 .app_theme_dark a:focus {
