--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -32,7 +32,7 @@
 }
 
 .app_weather_clouds .weather-icon_type_rain {
-  background-image: url('../../icons/rain-dark.svg');
+  background-image: url('../../assets/rain-dark.svg');
 }
 
 .app_theme_dark {
