--- a/src/components/Lightnings/Lightnings.scss
+++ b/src/components/Lightnings/Lightnings.scss
@@ -30,7 +30,7 @@
     height: 100%;
     content: '';
 
-    background-image: url('../../images/thunder.svg');
+    background-image: url('../../assets/thunder.svg');
     background-repeat: no-repeat;
     background-position: 0;
     background-size: cover;
