--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,7 @@ body {
         'Droid Sans', 'Helvetica Neue', sans-serif;
     font-size: 16px;
     color: var(--text-main);
+    scroll-behavior: smooth;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
