refactor: redux refactor

--- a/src/styles/Button.scss
+++ b/src/styles/Button.scss
@@ -1,6 +1,6 @@
 .btn {
     border-radius: 20px;
-    transition: all 0.3s ease;
+    transition: opacity 0.3s ease;
 }
 
 .btn:not(:disabled):focus {
