refactor: name exports

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+@import 'modern-normalize/modern-normalize.css';
+@import 'react-toastify/dist/ReactToastify.css';
+
 @import './styles/Button';
 @import './styles/Icons';
 @import './styles/Input';
