--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -1,7 +1,7 @@
 .app {
   display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
   grid-template-rows: minmax(100px, auto) 1fr minmax(100px, auto);
-  grid-template-columns: minmax(100px, auto) 1fr minmax(100px, auto);
   gap: 25px;
 
   min-height: 100vh;
@@ -55,24 +55,24 @@
 }
 
 .app__header {
-  grid-row: 1;
   grid-column: 2;
+  grid-row: 1;
 }
 
 .app__main {
   display: grid;
+  grid-column: 2;
+  grid-gap: 20px;
+  grid-row: 2;
   grid-template-areas:
         'date .'
         'city favs'
         'city .'
         'city .';
   grid-template-columns: 1fr auto;
-  grid-row: 2;
-  grid-column: 2;
-  grid-gap: 20px;
 }
 
 .app__footer {
-  grid-row: 3;
   grid-column: 2;
+  grid-row: 3;
 }
