--- a/src/module/location/ui/City/ui/City.scss
+++ b/src/module/location/ui/City/ui/City.scss
@@ -10,23 +10,23 @@
 
 .city__lead {
     display: grid;
-    grid-template-rows: repeat(2, auto);
     grid-template-columns: [main] minmax(100px, 400px) [peripheral] 1fr;
+    grid-template-rows: repeat(2, auto);
 }
 
 .city__main {
     display: flex;
-    flex-direction: column;
-    grid-row: 1 / 2;
     grid-column: 1;
+    grid-row: 1 / 2;
+    flex-direction: column;
     row-gap: 20px;
 }
 
 .city__peripheral {
     display: flex;
-    flex-direction: column;
-    grid-row: 1 / 2;
     grid-column: 2;
+    grid-row: 1 / 2;
+    flex-direction: column;
     gap: 10px;
     align-items: flex-end;
 
@@ -40,7 +40,7 @@
     margin: 0;
 
     font-size: 1.5rem;
-    line-height: 1rem;
+    line-height: 1.15em;
 }
 
 .city__text {
@@ -91,9 +91,9 @@
 .city__additional {
     display: flex;
     gap: 10px;
-    padding: 0;
 
     margin: 0;
+    padding: 0;
 
     list-style: none;
 }
