--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -1,12 +1,13 @@
 .app {
+  overflow: hidden;
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: 1fr 3fr 1fr;
   grid-template-rows: minmax(100px, auto) 1fr minmax(100px, auto);
   gap: 25px;
 
   min-height: 100vh;
 
-  transition: background-color 0.2s ease;
+  transition: background-color 0.35s ease-out;
 }
 
 .app_weather_clear {
@@ -36,8 +37,8 @@
 }
 
 .app_theme_dark {
-  color: var(--theme-black-color);
-  background: var(--theme-black-bg);
+  color: var(--color-theme-black);
+  background: var(--bg-theme-black);
 }
 
 .app_theme_dark a {
@@ -45,13 +46,7 @@
 }
 
 .app_theme_dark input {
-  color: var(--theme-black-color);
-  border: 2px solid var(--theme-black-color);
-}
-
-.app_theme_dark input::placeholder {
-  color: currentcolor;
-  opacity: 0.75;
+  color: var(--text-main);
 }
 
 .app__header {
@@ -72,7 +67,25 @@
   grid-template-columns: 1fr auto;
 }
 
+.app__empty {
+  font-size: 24px;
+  text-align: center;
+}
+
 .app__footer {
   grid-column: 2;
   grid-row: 3;
+}
+
+@media (min-width: 1440px) {
+  .app {
+    grid-template-columns: minmax(auto, 30%) 1fr minmax(auto, 30%);
+  }
+}
+
+
+@media (max-width: 1024px) {
+  .app {
+    grid-template-columns: minmax(auto, 75px) 1fr minmax(auto, 75px);
+  }
 }
