--- a/src/app/ui/Lightnings/Lightnings.scss
+++ b/src/app/ui/Lightnings/Lightnings.scss
@@ -32,7 +32,7 @@
     width: 100%;
     height: 100%;
 
-    background-image: url('../../../assets/thunder.svg');
+    background-image: url('../../../assets/icons/thunder.svg');
     background-repeat: no-repeat;
     background-position: 0;
     background-size: cover;
