--- a/src/app/ui/layout/Footer/Footer.scss
+++ b/src/app/ui/layout/Footer/Footer.scss
@@ -7,3 +7,11 @@
 
     border-top: 1px solid currentcolor;
 }
+
+.footer__heart {
+    color: var(--color-negative);
+}
+
+.footer p {
+    margin: 0.35rem;
+}
