--- a/src/app/ui/layout/Header/Header.scss
+++ b/src/app/ui/layout/Header/Header.scss
@@ -1,6 +1,8 @@
 .header {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 16px;
     align-items: center;
-    justify-content: space-between;
+
     padding-top: 1rem;
 }
