--- a/src/assets/styles/components/Button.scss
+++ b/src/assets/styles/components/Button.scss
@@ -4,7 +4,7 @@
 }
 
 .btn:not(:disabled):focus {
-    outline: 1px solid blue;
+    outline: 1px solid var(--color-accent);
     outline-offset: 2px;
 }
 
@@ -14,5 +14,5 @@
 }
 
 .app_theme_dark button:not(:disabled):focus {
-    outline-color: orange;
+    outline-color: var(--color-secondary);
 }
