--- a/src/assets/styles/components/Input.scss
+++ b/src/assets/styles/components/Input.scss
@@ -9,10 +9,10 @@ input {
 }
 
 input:focus {
-    outline: 2px solid blue;
+    outline: 2px solid var(--color-accent);
     outline-offset: 2px;
 }
 
 .app_theme_dark input:focus {
-    outline-color: orange;
+    outline-color: var(--color-secondary);
 }
