--- a/src/assets/styles/components/Link.scss
+++ b/src/assets/styles/components/Link.scss
@@ -4,10 +4,10 @@ a {
 }
 
 a:focus {
-    outline: 2px solid blue;
+    outline: 2px solid var(--color-accent);
     outline-offset: 2px;
 }
 
 .app_theme_dark a:focus {
-    outline-color: orange;
+    outline-color: var(--color-secondary);
 }
