--- a/src/index.scss
+++ b/src/index.scss
@@ -1,16 +1,22 @@
-@import 'modern-normalize/modern-normalize.css';
-@import 'react-toastify/dist/ReactToastify.css';
+@use 'modern-normalize/modern-normalize.css';
+@use 'react-toastify/dist/ReactToastify.css';
 
-@import 'assets/styles/Button';
-@import 'assets/styles/Icons';
-@import 'assets/styles/Input';
-@import 'assets/styles/Link';
-@import 'assets/styles/Animation';
-@import 'assets/styles/custom';
+@use 'assets/styles/components/Button';
+@use 'assets/styles/components/Icons';
+@use 'assets/styles/components/Input';
+@use 'assets/styles/components/Link';
+@use 'assets/styles/animations';
+@use 'assets/styles/custom';
+@use 'assets/styles/mixins';
+
+
 
 :root {
-    --theme-black-bg: #202124;
-    --theme-black-color: rgb(186 176 171);
+    --bg-theme-black: #202124;
+    --color-theme-black: rgb(186 176 171);
+    --color-accent: blue;
+    --color-secondary: orange;
+    --color-negative: #ff2800;
     --text-main: #3d3d3d;
     --text-secondary: #e0e0e0;
     --weather-bg-sunny: linear-gradient(180deg, rgb(63 167 241 / 100%) 0%, rgb(167 215 254 / 100%) 100%);
@@ -20,21 +26,14 @@
 }
 
 body {
-    scroll-behavior: smooth;
-
     margin: 0;
 
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans',
-        'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Fira Sans', sans-serif;
     font-size: 16px;
     color: var(--text-main);
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 .visually-hidden,
