--- a/src/module/theme/ui/ThemeSwitcher/ui/ThemeSwitcher.scss
+++ b/src/module/theme/ui/ThemeSwitcher/ui/ThemeSwitcher.scss
@@ -1,22 +1,8 @@
-@keyframes switchAnimation {
-    0% {
-        transform: scale(1);
-    }
-
-    50% {
-        transform: scale(1.2);
-    }
-
-    100% {
-        transform: scale(1);
-    }
-}
-
 .theme-switcher {
     display: flex;
-    grid-area: theme-switcher;
     column-gap: 10px;
     align-items: center;
+    justify-self: flex-end;
 
     width: 50px;
 }
@@ -64,7 +50,7 @@
 
 
 .theme-switcher__btn:active {
-    animation-name: switchAnimation;
+    animation-name: switch-animation;
     animation-duration: 0.5s;
     animation-iteration-count: infinite;
 }
@@ -80,11 +66,11 @@
 }
 
 .app_theme_dark .theme-switcher__btn:not(:disabled):focus {
-    box-shadow: 0 0 0 2px orange;
+    box-shadow: 0 0 0 2px var(--color-secondary);
 }
 
 .app_theme_dark .theme-switcher__btn:not(:disabled):hover {
-    box-shadow: 0 0 2px 3px orange;
+    box-shadow: 0 0 2px 3px var(--color-secondary);
 }
 
 .theme-switcher__btn_type_light:hover {
