--- a/src/module/user/ui/SwitchFavorite/ui/SwitchFavorite.scss
+++ b/src/module/user/ui/SwitchFavorite/ui/SwitchFavorite.scss
@@ -13,7 +13,7 @@
 /* theme */
 
 .app_theme_dark .switch-favorite__btn {
-    color: var(--theme-black-color);
+    color: var(--color-theme-black);
 }
 
 .switch-favorite__btn:not(:disabled):hover {
