refactor: changes path to icons

--- a/src/assets/styles/components/Icons.scss
+++ b/src/assets/styles/components/Icons.scss
@@ -22,31 +22,31 @@
 }
 
 .weather-icon_type_sunny {
-    background-image: url('./assets/icons/sunny.svg');
+    background-image: url('../../icons/sunny.svg');
 }
 
 .weather-icon_type_cloudly {
-    background-image: url('./assets/icons/cloudly.svg');
+    background-image: url('../../icons/cloudly.svg');
 }
 
 .weather-icon_type_partlySunny {
-    background-image: url('./assets/icons/partlySunny.svg');
+    background-image: url('../../icons/partlySunny.svg');
 }
 
 .weather-icon_type_rain {
-    background-image: url('./assets/icons/rain.svg');
+    background-image: url('../../icons/rain.svg');
 }
 
 .weather-icon_type_chanceRain {
-    background-image: url('./assets/icons/chanceRain.svg');
+    background-image: url('../../icons/chanceRain.svg');
 }
 
 .weather-icon_type_chanceStorm {
-    background-image: url('./assets/icons/chanceStorm.svg');
+    background-image: url('../../icons/chanceStorm.svg');
 }
 
 .weather-icon_type_snow {
-    background-image: url('./assets/icons/snow-dark.svg');
+    background-image: url('../../icons/snow-dark.svg');
 }
 
 .app_weather_clouds:not(.app_theme_dark) .fa-droplet {
