--- a/src/index.scss
+++ b/src/index.scss
@@ -26,6 +26,8 @@
 }
 
 body {
+    overflow: hidden;
+
     margin: 0;
 
     font-family: -apple-system, BlinkMacSystemFont, 'Fira Sans', sans-serif;
