--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -1,3 +1,13 @@
+.title-section {
+    margin-top: 0;
+    margin-bottom: 0.5em;
+}
+
+.box {
+    padding: 16px;
+    border-radius: 12px;
+}
+
 #stars {
     width: 1px;
     max-height: 1px;
